compiler-core/src/language_server/tests/snapshots/rakun_core__language_server__tests__completion__completions_for_an_import_from_dependency_with_docs.snap
---
source: compiler-core/src/language_server/tests/completion.rs
expression: "//// Main package\n//// documentation!\n\nimport rakun\n\npub fn main() {\n  0\n}"
---
//// Main package
//// documentation!

import rak|un

pub fn main() {
  0
}


----- Completion content -----
example_module
  kind:   Module
  edits:
    [3:7-3:7]: "example_module"
